--- a/index.html
+++ b/index.html
@@ -537,5 +537,18 @@
         </div>
       </div>
     </div>
+
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-5569XCCN7L"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-5569XCCN7L");
+    </script>
   </body>
 </html>
