Adding title and description for the page.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Verity</title>
+    <title>The Traveler - Destiny 2 :: Verity</title>
+    <link rel="icon" type="image/png" href="../templates/general/assets/img/favicon.png" />
+    <meta name="description" content="Calculadora de símbolos e formas para o quarto encontro Veracidade (Verity) da Raid Limiar da Salvação (Edge of Salvation) da DLC A Forma Final de Destiny 2." />
     <script type="module" src="https://cdn.skypack.dev/twind/shim"></script>
     <script
       defer
