--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
           class="flex flex-col border-2 pt-2 pb-4 px-4 rounded-md w-full mt-4"
           id="dissection"
         >
-          <div class="font-bold text-lg">Dissecar <span class="icon-help" title="Abaixo a lista do que precisa ser extraído de cada um dos elementos para criar as formas finais. As formas finais estão exibidas abaixo com o respectivo símbolo à frente.">ℹ️</span></div>
+          <div class="font-bold text-lg">Dissecar <span class="icon-help" title="Abaixo a lista do que precisa ser extraído de cada uma das estátuas para criar as formas finais. As formas finais estão exibidas abaixo com o respectivo símbolo à frente.">ℹ️</span></div>
           <div class="w-full flex flex-row">
             <div class="flex flex-col w-1/3">
 
